add content and style

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/fontawesome-all.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body > 
+<body class="about"> 
         <!-- ========== Start header ========== -->
         <header>
             <nav class="navbar navbar-expand-sm navbar-dark bg-transparent">
@@ -66,16 +66,17 @@
         </header>
         <!-- ========== End header ========== -->
         <!-- ========== Start about ========== -->
-        <section class="about">
+        <section class="about text-center">
             <div class="container">
-                    <h2 class="text-center">A propos de nos</h2>
+                    <h2 class="my-5 text-center">A propos de nos</h2>
                     <p>Atlantis : the fourth sun est le fruit de la collaboration de plusieurs sociétés mettant en oeuvre chacune leur domain d’expertise, qu’il s’agisse de production, de graphisme 3D, ou de développement.</p>
 
             </div>
             <div class="container">
                 <div class="row">
-                    <h2>Orichalcum</h2>
+                    <h2 class="my-4">Orichalcum</h2>
                     <h3>Advertise Advertise Advertise</h3>
+                    <img class="w-25 mx-auto my-5" src="asset/img/apropos/Objet-dynamique-vectoriel.png" alt="">
                     <p>Businesses often become known today through effective marketing. The marketing may be in the form of a regular news item or half column society news in the Sunday newspaper. The marketing may be in the form of a heart to heart talk with Mr. Brown on his prominent local television show. These are all advertising.</p>
                     <p>Businesses cannot get away from the force of advertising. If they want to make their products known in the marketplace they He must have very clear-cut and definite ideas as to what’s what, and no matter what influence</p>
                     <p>may be brought to bear upon him by the different managers the advertising manager must have a stamina to select what he considers the best and arrange the same as he thinks wise, while at the same time he must have sufficient tact and skill to do these things without hurting the feelings of buyers</p>
@@ -83,8 +84,9 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <h2>VR-connection</h2>
+                    <h2 class="my-4">VR-connection</h2>
                     <h3>Advertise Advertise Advertise</h3>
+                    <img class="w-25 mx-auto my-5" src="asset/img/apropos/VRV.png" alt="">
                     <p>Businesses often become known today through effective marketing. The marketing may be in the form of a regular news item or half column society news in the Sunday newspaper. The marketing may be in the form of a heart to heart talk with Mr. Brown on his prominent local television show. These are all advertising.
                     </p>
                     <p>Businesses cannot get away from the force of advertising. If they want to make their products known in the marketplace they He must have very clear-cut and definite ideas as to what’s what, and no matter what influence</p>
