commit of project atlantis

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <div class="card-img-overlay">
                                 <div class="position-absolute bottom-0">
                                     <h5 class="card-title">Atlantis, Le premier chapitre est disponible sur steam</h5>
-                              <p class="card-text ">Vous pouvez d’hores et déjà acheter le premier chapitre d’Atlantis Origin sur la plateforme Steam
+                              <p class="card-text">Vous pouvez d’hores et déjà acheter le premier chapitre d’Atlantis Origin sur la plateforme Steam
                             </p>
                                 </div>
                             </div>
@@ -196,13 +196,11 @@
         <footer>
             <div class="footer-link">
                     <div class="container">
-                        <h2 class="text-center">Nos partenaires</h2>
-                    </div>
-                    <div class="container">
                         <div class="row">
                             <div class="col-md-4">
-                                <h3>ORICHALCUM PICTURES</h3>
+                                <h3>Nos partenaires</h3>
                                 <ul class="list-unstyled">
+                                    <li>ORICHALCUM PICTURES</li>
                                     <li>vr-connection</li>
                                     <li>payoff technologies</li>
                                     <li>digiteyes</li>
@@ -239,8 +237,8 @@
                             <div class="col-md-6">
                                 <form action="">
                                     <div class="input-group mb-3">
-                                        <input type="text" class="form-control" placeholder="" aria-label="Button" aria-describedby="">
-                                        <button class="btn btn-outline-secondary" type="button" id="">
+                                        <input  type="text" class="form-control border-white border border-5" placeholder="" aria-label="Button" aria-describedby="">
+                                        <button class=" border border-white border-5 btn btn-outline-secondary" type="button" id="">
                                             <i class="fas fa-arrow-right"></i>
                                         </button>
                                     </div>
